# azure-practices

./: .dockerignore  .gitignore  Dockerfile  compose.prod.yaml  compose.yaml  pyproject.toml
apps/auth/application/dtos/: user_dto.py
apps/auth/application/mappers/: user_mapper.py
apps/auth/application/ports/repositories/: i_user_repository.py
apps/auth/application/use_cases/: user_auth_use_case.py
apps/auth/domain/constants/: group_roles_constant.py
apps/auth/domain/entities/: user_entity.py
apps/auth/domain/exceptions/: login_exception.py
apps/auth/domain/policies/: login_policy.py
apps/auth/domain/value_objects/: file_field_vo.py
apps/auth/infrastructure/: apps.py  urls.py
apps/auth/infrastructure/factories/: auth_use_case_factory.py
apps/auth/infrastructure/helpers/: cookie_helper.py
apps/auth/infrastructure/mappers/: user_mapper.py
apps/auth/infrastructure/migrations/: 0001_initial.py
apps/auth/infrastructure/models/: user_model.py
apps/auth/infrastructure/repositories/: user_repository.py
apps/auth/infrastructure/serializers/: user_serializers.py
apps/auth/infrastructure/services/: hasher_service.py  jwt_token_generator_service.py
apps/auth/infrastructure/views/: login_view.py  register_view.py  users_viewset.py
apps/shared/application/: validation.py
apps/shared/domain/exceptions/: domain_exception.py
apps/shared/domain/policies/: domain_policy.py
apps/shared/domain/value_objects/: file_field_vo.py
apps/shared/infrastructure/mappers/: file_field_mapper.py
config/: settings.py  urls.py
(+2 files in other folders)
