[project]
name = "azure-practices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==6.0.6",
    "django-environ==0.14.0",
    "django-filter==25.2",
    "djangorestframework==3.17.1",
    "djangorestframework-simplejwt==5.5.1",
    "gunicorn==26.0.0",
    "pillow>=12.3.0",
]
