[project]
name = "azure-practices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-storage-blob>=12.30.0",
    "django==6.0.6",
    "django-cors-headers>=4.9.0",
    "django-environ==0.14.0",
    "django-filter==25.2",
    "django-storages>=1.14.6",
    "djangorestframework==3.17.1",
    "djangorestframework-simplejwt==5.5.1",
    "gunicorn==26.0.0",
    "pillow>=12.3.0",
]
